--- a/download_twitter_data.ipynb
+++ b/download_twitter_data.ipynb
@@ -161,36 +161,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 results for query regio Fahrrad returned\n",
+      "6 results for query regio Fahrrad returned\n",
       "0 results for query regio call a bike returned\n",
-      "3 results for query regio rad returned\n",
-      "2 results for query regio bike returned\n",
+      "2 results for query regio rad returned\n",
+      "3 results for query regio bike returned\n",
       "0 results for query regio ebike returned\n",
       "0 results for query regio Elektrorad returned\n",
       "0 results for query regio Elektrobike returned\n",
       "0 results for query regio Elektrofahrrad returned\n",
-      "0 results for query regio pedelec returned\n",
-      "0 results for query regio velo returned\n",
+      "1 results for query regio pedelec returned\n",
+      "2 results for query regio velo returned\n",
       "0 results for query regio Mountainbike returned\n",
       "0 results for query regio Trekkingbike returned\n",
       "0 results for query regio Radl returned\n",
-      "100 results for query Zug Fahrrad returned\n",
+      "99 results for query Zug Fahrrad returned\n",
       "0 results for query Zug call a bike returned\n",
-      "100 results for query Zug rad returned\n",
-      "6 results for query Zug bike returned\n",
-      "0 results for query Zug ebike returned\n",
+      "74 results for query Zug rad returned\n",
+      "13 results for query Zug bike returned\n",
+      "3 results for query Zug ebike returned\n",
       "0 results for query Zug Elektrorad returned\n",
       "0 results for query Zug Elektrobike returned\n",
-      "1 results for query Zug Elektrofahrrad returned\n",
-      "0 results for query Zug pedelec returned\n",
-      "13 results for query Zug velo returned\n",
+      "0 results for query Zug Elektrofahrrad returned\n",
+      "2 results for query Zug pedelec returned\n",
+      "12 results for query Zug velo returned\n",
       "1 results for query Zug Mountainbike returned\n",
       "0 results for query Zug Trekkingbike returned\n",
-      "3 results for query Zug Radl returned\n",
-      "4 results for query sbahn Fahrrad returned\n",
+      "1 results for query Zug Radl returned\n",
+      "2 results for query sbahn Fahrrad returned\n",
       "0 results for query sbahn call a bike returned\n",
-      "2 results for query sbahn rad returned\n",
-      "0 results for query sbahn bike returned\n",
+      "3 results for query sbahn rad returned\n",
+      "1 results for query sbahn bike returned\n",
       "0 results for query sbahn ebike returned\n",
       "0 results for query sbahn Elektrorad returned\n",
       "0 results for query sbahn Elektrobike returned\n",
@@ -200,20 +200,20 @@
       "0 results for query sbahn Mountainbike returned\n",
       "0 results for query sbahn Trekkingbike returned\n",
       "0 results for query sbahn Radl returned\n",
-      "3 results for query ubahn Fahrrad returned\n",
+      "8 results for query ubahn Fahrrad returned\n",
       "0 results for query ubahn call a bike returned\n",
-      "1 results for query ubahn rad returned\n",
-      "1 results for query ubahn bike returned\n",
+      "6 results for query ubahn rad returned\n",
+      "0 results for query ubahn bike returned\n",
       "0 results for query ubahn ebike returned\n",
       "0 results for query ubahn Elektrorad returned\n",
       "0 results for query ubahn Elektrobike returned\n",
       "0 results for query ubahn Elektrofahrrad returned\n",
       "0 results for query ubahn pedelec returned\n",
-      "1 results for query ubahn velo returned\n",
+      "0 results for query ubahn velo returned\n",
       "0 results for query ubahn Mountainbike returned\n",
       "0 results for query ubahn Trekkingbike returned\n",
-      "1 results for query ubahn Radl returned\n",
-      "0 results for query Stadtbahn Fahrrad returned\n",
+      "0 results for query ubahn Radl returned\n",
+      "1 results for query Stadtbahn Fahrrad returned\n",
       "0 results for query Stadtbahn call a bike returned\n",
       "0 results for query Stadtbahn rad returned\n",
       "0 results for query Stadtbahn bike returned\n",
@@ -228,8 +228,8 @@
       "0 results for query Stadtbahn Radl returned\n",
       "2 results for query Regionalbahn Fahrrad returned\n",
       "0 results for query Regionalbahn call a bike returned\n",
-      "3 results for query Regionalbahn rad returned\n",
-      "2 results for query Regionalbahn bike returned\n",
+      "1 results for query Regionalbahn rad returned\n",
+      "0 results for query Regionalbahn bike returned\n",
       "0 results for query Regionalbahn ebike returned\n",
       "0 results for query Regionalbahn Elektrorad returned\n",
       "0 results for query Regionalbahn Elektrobike returned\n",
@@ -239,46 +239,46 @@
       "0 results for query Regionalbahn Mountainbike returned\n",
       "0 results for query Regionalbahn Trekkingbike returned\n",
       "0 results for query Regionalbahn Radl returned\n",
-      "100 results for query Straßenbahn Fahrrad returned\n",
+      "20 results for query Straßenbahn Fahrrad returned\n",
       "0 results for query Straßenbahn call a bike returned\n",
-      "7 results for query Straßenbahn rad returned\n",
-      "0 results for query Straßenbahn bike returned\n",
-      "0 results for query Straßenbahn ebike returned\n",
+      "17 results for query Straßenbahn rad returned\n",
+      "1 results for query Straßenbahn bike returned\n",
+      "1 results for query Straßenbahn ebike returned\n",
       "0 results for query Straßenbahn Elektrorad returned\n",
       "0 results for query Straßenbahn Elektrobike returned\n",
       "0 results for query Straßenbahn Elektrofahrrad returned\n",
       "0 results for query Straßenbahn pedelec returned\n",
       "0 results for query Straßenbahn velo returned\n",
-      "0 results for query Straßenbahn Mountainbike returned\n",
+      "1 results for query Straßenbahn Mountainbike returned\n",
       "0 results for query Straßenbahn Trekkingbike returned\n",
       "1 results for query Straßenbahn Radl returned\n",
-      "10 results for query Tram Fahrrad returned\n",
+      "5 results for query Tram Fahrrad returned\n",
       "0 results for query Tram call a bike returned\n",
-      "24 results for query Tram rad returned\n",
-      "100 results for query Tram bike returned\n",
-      "1 results for query Tram ebike returned\n",
+      "23 results for query Tram rad returned\n",
+      "99 results for query Tram bike returned\n",
+      "4 results for query Tram ebike returned\n",
       "0 results for query Tram Elektrorad returned\n",
       "0 results for query Tram Elektrobike returned\n",
       "0 results for query Tram Elektrofahrrad returned\n",
       "0 results for query Tram pedelec returned\n",
-      "99 results for query Tram velo returned\n",
-      "0 results for query Tram Mountainbike returned\n",
+      "96 results for query Tram velo returned\n",
+      "1 results for query Tram Mountainbike returned\n",
       "0 results for query Tram Trekkingbike returned\n",
-      "31 results for query Tram Radl returned\n",
-      "100 results for query Bus Fahrrad returned\n",
-      "13 results for query Bus call a bike returned\n",
+      "0 results for query Tram Radl returned\n",
+      "90 results for query Bus Fahrrad returned\n",
+      "14 results for query Bus call a bike returned\n",
       "100 results for query Bus rad returned\n",
       "100 results for query Bus bike returned\n",
-      "28 results for query Bus ebike returned\n",
+      "17 results for query Bus ebike returned\n",
       "0 results for query Bus Elektrorad returned\n",
       "0 results for query Bus Elektrobike returned\n",
       "0 results for query Bus Elektrofahrrad returned\n",
-      "1 results for query Bus pedelec returned\n",
-      "100 results for query Bus velo returned\n",
-      "1 results for query Bus Mountainbike returned\n",
+      "0 results for query Bus pedelec returned\n",
+      "99 results for query Bus velo returned\n",
+      "0 results for query Bus Mountainbike returned\n",
       "0 results for query Bus Trekkingbike returned\n",
-      "2 results for query Bus Radl returned\n",
-      "1 results for query Fernbus Fahrrad returned\n",
+      "3 results for query Bus Radl returned\n",
+      "0 results for query Fernbus Fahrrad returned\n",
       "0 results for query Fernbus call a bike returned\n",
       "0 results for query Fernbus rad returned\n",
       "0 results for query Fernbus bike returned\n",
@@ -305,40 +305,40 @@
       "0 results for query Stadtbus Trekkingbike returned\n",
       "0 results for query Stadtbus Radl returned\n",
       "100 results for query bahn Fahrrad returned\n",
-      "15 results for query bahn call a bike returned\n",
+      "1 results for query bahn call a bike returned\n",
       "100 results for query bahn rad returned\n",
-      "54 results for query bahn bike returned\n",
-      "2 results for query bahn ebike returned\n",
+      "15 results for query bahn bike returned\n",
+      "4 results for query bahn ebike returned\n",
       "0 results for query bahn Elektrorad returned\n",
       "0 results for query bahn Elektrobike returned\n",
-      "1 results for query bahn Elektrofahrrad returned\n",
-      "1 results for query bahn pedelec returned\n",
-      "4 results for query bahn velo returned\n",
-      "0 results for query bahn Mountainbike returned\n",
+      "0 results for query bahn Elektrofahrrad returned\n",
+      "2 results for query bahn pedelec returned\n",
+      "2 results for query bahn velo returned\n",
+      "1 results for query bahn Mountainbike returned\n",
       "0 results for query bahn Trekkingbike returned\n",
-      "3 results for query bahn Radl returned\n",
+      "2 results for query bahn Radl returned\n",
       "100 results for query ÖPNV Fahrrad returned\n",
       "0 results for query ÖPNV call a bike returned\n",
       "100 results for query ÖPNV rad returned\n",
-      "8 results for query ÖPNV bike returned\n",
-      "2 results for query ÖPNV ebike returned\n",
+      "11 results for query ÖPNV bike returned\n",
+      "1 results for query ÖPNV ebike returned\n",
       "0 results for query ÖPNV Elektrorad returned\n",
       "0 results for query ÖPNV Elektrobike returned\n",
       "0 results for query ÖPNV Elektrofahrrad returned\n",
       "3 results for query ÖPNV pedelec returned\n",
-      "0 results for query ÖPNV velo returned\n",
+      "1 results for query ÖPNV velo returned\n",
       "0 results for query ÖPNV Mountainbike returned\n",
       "0 results for query ÖPNV Trekkingbike returned\n",
-      "0 results for query ÖPNV Radl returned\n",
-      "15 results for query ICE Fahrrad returned\n",
-      "0 results for query ICE call a bike returned\n",
-      "98 results for query ICE rad returned\n",
-      "100 results for query ICE bike returned\n",
-      "10 results for query ICE ebike returned\n",
+      "1 results for query ÖPNV Radl returned\n",
+      "14 results for query ICE Fahrrad returned\n",
+      "3 results for query ICE call a bike returned\n",
+      "61 results for query ICE rad returned\n",
+      "99 results for query ICE bike returned\n",
+      "6 results for query ICE ebike returned\n",
       "0 results for query ICE Elektrorad returned\n",
       "0 results for query ICE Elektrobike returned\n",
       "0 results for query ICE Elektrofahrrad returned\n",
-      "0 results for query ICE pedelec returned\n",
+      "1 results for query ICE pedelec returned\n",
       "7 results for query ICE velo returned\n",
       "0 results for query ICE Mountainbike returned\n",
       "0 results for query ICE Trekkingbike returned\n",
@@ -349,33 +349,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9 results for query IC Fahrrad returned\n",
+      "1 results for query IC Fahrrad returned\n",
       "0 results for query IC call a bike returned\n",
-      "18 results for query IC rad returned\n",
-      "32 results for query IC bike returned\n",
+      "12 results for query IC rad returned\n",
+      "20 results for query IC bike returned\n",
       "0 results for query IC ebike returned\n",
       "0 results for query IC Elektrorad returned\n",
       "0 results for query IC Elektrobike returned\n",
       "0 results for query IC Elektrofahrrad returned\n",
-      "1 results for query IC pedelec returned\n",
-      "4 results for query IC velo returned\n",
+      "0 results for query IC pedelec returned\n",
+      "7 results for query IC velo returned\n",
       "0 results for query IC Mountainbike returned\n",
       "0 results for query IC Trekkingbike returned\n",
       "0 results for query IC Radl returned\n",
-      "51 results for query RE Fahrrad returned\n",
-      "43 results for query RE call a bike returned\n",
+      "7 results for query RE Fahrrad returned\n",
+      "99 results for query RE call a bike returned\n",
       "100 results for query RE rad returned\n",
-      "100 results for query RE bike returned\n",
-      "90 results for query RE ebike returned\n",
+      "99 results for query RE bike returned\n",
+      "99 results for query RE ebike returned\n",
       "0 results for query RE Elektrorad returned\n",
       "0 results for query RE Elektrobike returned\n",
       "0 results for query RE Elektrofahrrad returned\n",
       "1 results for query RE pedelec returned\n",
-      "100 results for query RE velo returned\n",
-      "7 results for query RE Mountainbike returned\n",
+      "99 results for query RE velo returned\n",
+      "5 results for query RE Mountainbike returned\n",
       "0 results for query RE Trekkingbike returned\n",
       "0 results for query RE Radl returned\n",
-      "2357 tweets where found with 2140 unique tweet_ids\n"
+      "2119 tweets where found with 1949 unique tweet_ids\n"
      ]
     }
    ],
@@ -424,25 +424,26 @@
     {
      "data": {
       "text/plain": [
-       "de     1165\n",
-       "en      859\n",
-       "fr      238\n",
-       "und      26\n",
-       "tl       24\n",
-       "ja       10\n",
-       "hi        7\n",
-       "nl        7\n",
-       "es        5\n",
-       "cs        4\n",
-       "it        3\n",
-       "lv        2\n",
-       "in        1\n",
-       "sl        1\n",
-       "tr        1\n",
-       "pt        1\n",
-       "et        1\n",
-       "ta        1\n",
-       "ht        1\n",
+       "de     953\n",
+       "en     882\n",
+       "fr     220\n",
+       "tr      15\n",
+       "qme      7\n",
+       "es       7\n",
+       "lv       6\n",
+       "und      5\n",
+       "it       4\n",
+       "tl       3\n",
+       "hi       3\n",
+       "ja       2\n",
+       "nl       2\n",
+       "ro       2\n",
+       "cs       2\n",
+       "zxx      2\n",
+       "sv       1\n",
+       "in       1\n",
+       "et       1\n",
+       "ko       1\n",
        "Name: lang, dtype: int64"
       ]
      },
