Added comments für download_twitter_data.ipynb

--- a/download_twitter_data.ipynb
+++ b/download_twitter_data.ipynb
@@ -4,7 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import libraries and key to access twitter. Keys and tokens can be gerated with an twitter account at https://developer.twitter.com/en/portal/dashboard"
+    "# Herunerladen von Twitter-Daten zum Thema Fahrrad und DB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In dieser Jupyter-Datei werden Daten aus Twitter heruntergeladen und in einer Pickle-Datei gespeichert. Sie werden in der Form \"YYYY-MM-DD_tweets_DB_Fahrrad\" im Ordner \"Tweets\" gespeichert. Die abgerufenen Daten in jeder Pickle-Datei sind nicht älter als 7 Tage zum Zeitpunkt des Abrufs bei Twitter. Zum Abrufen der Daten aus Twitter wird ein Developer-Account benötigt. In unserem Fall haben wir uns für den \"V2 Access Levels - Essential\" Account entschieden. Er bietet das herunterladen von 500.000 Tweets pro Montat und ist kostenlos nutzbar, gibt jedoch keine Tweets älter als 7 Tage aus.\n",
+    "Weitere Informationen zu den einzelnen Accounts gibt es hier: https://developer.twitter.com/en/docs/twitter-api/getting-started/about-twitter-api (Abgerufen: 18.07.2022)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unsere Idee ist es daher, einzelne Pickle-Dateien für jede Woche (Beginn 05.01.2022) zu erstellen und aus ihnen ein Datenset zum Thema Fahrrad und Bahn zu erstellen, um diese Daten dann zu analysieren. Die Zusammenstellung der einzelnen Pickle-Dateien zu einem großen Datenset und die Analyse der Daten erfolgt dann in der Jupyter-Datei \"Load_Datasets.ipynb\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vorgehensweise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zunächst werden die benötigten Bibliotheken und Schlüssel für eine erfolgreiche Anbindung an Twitter importiert. Keys und Tokens können unter dem folgenden Link mithilfe eines gültigen Twitter-Accounts erstellt werden:  https://developer.twitter.com/en/portal/dashboard (Abgerufen: 18.07.2022)"
    ]
   },
   {
@@ -23,8 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "create client to access the twitter API\n",
-    "Following tutorial: https://www.kirenz.com/post/2021-12-10-twitter-api-v2-tweepy-and-pandas-in-python/twitter-api-v2-tweepy-and-pandas-in-python/"
+    "Die Einstellungen des Clients, um eine erfolgreiche Anbindung an die Twitter-API zu ermöglichen, wurden nach folgendem Tutorial gesetzt: https://www.kirenz.com/post/2021-12-10-twitter-api-v2-tweepy-and-pandas-in-python/twitter-api-v2-tweepy-and-pandas-in-python/ (Abgerufen: 18.07.2022)"
    ]
   },
   {
@@ -47,47 +75,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How to create queries https://medium.com/@robguilarr/making-queries-to-twitter-api-on-tweepy-66afeb7184a4"
+    "Um bestimmte Tweets von der Twitter-API anfordern zu können, muss eine Query übergeben werden, sodass die API dann gefilterte Tweets dementsprechend zurückgeben kann. Queries können unterschiedlich aufgebaut sein. Für weitere Informationen siehe: https://medium.com/@robguilarr/making-queries-to-twitter-api-on-tweepy-66afeb7184a4 (Abgerufen: 18.07.2022)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ToDO so schreiben das queries aus Suchwörtern aus zwei Listen abgefragr werden und Duplicate entfernt werden.\n",
-    "Anschließend müssen Duplicate entfernt werden\n",
-    "\n",
-    "Bahn Bezug:\n",
-    "regio\n",
-    "Zug\n",
-    "sbahn\n",
-    "ubahn\n",
-    "Stadtbahn\n",
-    "Regionalbahn\n",
-    "Straßenbahn\n",
-    "Tram\n",
-    "Bus\n",
-    "Fernbus\n",
-    "Stadtbus\n",
-    "bahn\n",
-    "ÖPNV\n",
-    "ICE\n",
-    "IC\n",
-    "RE\n",
-    "\n",
-    "Fahrrad Bezug:\n",
-    "Fahrrad\n",
-    "rad\n",
-    "bike\n",
-    "ebike\n",
-    "Elektrorad\n",
-    "Elektrobike\n",
-    "Elektrofahrrad\n",
-    "pedelec\n",
-    "velo\n",
-    "Mountainbike\n",
-    "Trekkingbike\n",
-    "Radl"
+    "In der Funktion \"get_tweets\" wird eine Search-Query, sowie die maximale Anzahl der Rückgabe an gefundenen Tweets festgelegt. In dem Feld \"tweet_fields\" wird festgelegt, welche Informationen zu dem einzelnen, gefundenen Tweet geliefert werden sollen."
    ]
   },
   {
@@ -112,6 +107,13 @@
     "                                                        'text'],\n",
     "                                         max_results=max_results)\n",
     "    return tweets\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mithilfe von Schlüsselwörtern zum Kontext Bahn und Fahrrad soll später eine Query erstellt werden. Aus diesem Grund wurde je eine Synonym-Liste für das Wort \"Bahn\" und \"Fahrrad\" erstellt."
    ]
   },
   {
@@ -150,6 +152,13 @@
     "                            'Trekkingbike',\n",
     "                            'Radl']\n",
     "           }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nun wird mthilfe der Schlüsselwörter zum Kontext Bahn und Fahrrad die Search-Query erstellt und mit der Funktion \"get_tweets\" die Anfrage an die Twitter-API übergeben. Um einen groben Überblick über die gefilterten Tweets zu erhalten, wird die Anzahl der gefundenen Tweets in seinem jeweiligen Synonym-Paar aus Bahn und Fahrrad ausgegeben. Es bleibt dabei zu berücksichtigen, dass in jedem Paar nur maximal 100 Tweets stehen können, da die Anzahl durch den Essential-Account von Twitter beschränkt ist. "
    ]
   },
   {
@@ -407,6 +416,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die erfolgreich heruntergeladenen Tweets werden nun in einer Pickle-Datei gespeichert. Sie werden nach dem Schema \"YYYY-MM-DD_tweets_DB_Fahrrad\" gespeichert unter dem Ordner \"Tweets\" gespeichert."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -414,6 +430,13 @@
    "source": [
     "save_filename = pd.Timestamp.today().strftime('%Y-%m-%d') + '_tweets_DB_Fahrrad'\n",
     "tweets_data.to_pickle('Tweets/' + save_filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Daten wurden bis dahin noch nicht nach ihrer Sprache gefiltert. Um hier einen groben Überblick zu bekommen, welche Sprache am meisten vorhanden ist, werden die Anzahl an Tweets nach ihrere Sprache ausgegeben."
    ]
   },
   {
@@ -478,21 +501,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Auf Twitter gibt es ca. 20 Tweets pro Tag zum Thema Bahn & Fahrrad. Reicht das?\n",
-    "- Nur Zugriff auf Daten der letzten 7 Tage"
+    "https://towardsdatascience.com/collect-data-from-twitter-a-step-by-step-implementation-using-tweepy-7526fff2cb3"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "https://towardsdatascience.com/collect-data-from-twitter-a-step-by-step-implementation-using-tweepy-7526fff2cb31https://towardsdatascience.com/collect-data-from-twitter-a-step-by-step-implementation-using-tweepy-7526fff2cb31"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -506,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
