all files with comments, changed stuff for public repository

--- a/Elbow_Method.ipynb
+++ b/Elbow_Method.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zur weiteren Informationsgewinnung führen wir in dieser Datei eine Cluster-Analyse durch. Dabei verwenden wir die Elbow-Methode zur Clusterbestimmung, nutzen dann den kMeans Algortihmus zur Erstellung der Cluster und versuchen danach Infromationen aus den Clustern zu gewinnen. Am Ende gehen wir auf unsere Ergebnisse ein."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vorgehensweise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zunächst werden wieder alle nötigen Module importiert."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -17,6 +45,34 @@
     "import string\n",
     "from collections import Counter\n",
     "import re"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Elbow-Methode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die nächste Idee ist die Druchführung der Elbow-Methode, um die bestmögliche wahl an Clusterzentren zu erhalten. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hier ist ein gutes Tutorial zur Verwendung einer solchen Methode: https://www.geeksforgeeks.org/elbow-method-for-optimal-value-of-k-in-kmeans/ (Abgerufen: 20.07.2022)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zunächst lesen wir unser Datenset ein und filtern die @-Erwähnungen und Umbrüche (\\n) aus den Texten. "
    ]
   },
   {
@@ -53,6 +109,13 @@
     "                    'positive', \n",
     "                    'negative', \n",
     "                    'neutral']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nun führen wir die Elbow-Methode aus."
    ]
   },
   {
@@ -263,6 +326,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alle drei Diagramme zeigen auf, dass die größtmögliche Informationshinzugewinnung bei der Clustergröße von 4 liegt. Man erkennt dies daran, dass nach dem 4. Cluster die Informationsgewinnung nur linear ist. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -300,6 +370,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### kMeans Aglorithmus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nun führen wir den kMeans Algorithmus aus, um 4 Cluster zu erhalten."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -332,9 +416,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mean und Median"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nun schauen wir uns die Werte für jedes Cluster genauer an und vergleichen die Mean und Median Werte miteinander. Wir möchten erkennen, ob es große Ausreißer in einem Cluster gibt."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -484,6 +584,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>is_neun_euro</th>\n",
+       "      <th>positive</th>\n",
+       "      <th>negative</th>\n",
+       "      <th>neutral</th>\n",
+       "      <th>kmeans_label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>median</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.949831</td>\n",
+       "      <td>-0.014251</td>\n",
+       "      <td>2.082915</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.060018</td>\n",
+       "      <td>-1.542756</td>\n",
+       "      <td>0.721486</td>\n",
+       "      <td>1.532972</td>\n",
+       "      <td>0.829283</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        is_neun_euro  positive  negative   neutral  kmeans_label\n",
+       "median      0.000000 -1.949831 -0.014251  2.082915      1.000000\n",
+       "mean        0.060018 -1.542756  0.721486  1.532972      0.829283"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[cluster_variables].agg(['median', 'mean'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Im Nachfolgenden werden die Clustergröße und die positv/negativ/neutral Werte des Means und Medians ausgegeben. Wir erkennen einen 9€ Kontext Zusammenhang in Cluster 3 (hier gibt es auch eine große Abweichung von Mean und Median). Die Ergebnisse decken sich mit der Sentimentanalyse."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [
@@ -508,7 +684,7 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -526,6 +702,20 @@
    ],
    "source": [
     "ax = df_auswertung[['positive', 'negative', 'neutral']].plot.bar(rot=0, figsize=(10,10), ylabel='Sentiment Wert',title='Sentimentwerte nach Clustern')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Versuch des weiteren Informationsgewinns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hier überprüfen wir, ob wir noch weitere Informationen innerhalb der Cluster erkennen können. Als Beispiel hier für Cluster 3."
    ]
   },
   {
@@ -562,9 +752,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hier die Verteilung von allen Clustern."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -592,6 +791,20 @@
    "source": [
     "import seaborn as sns\n",
     "sns.scatterplot(data=df, x=\"negative\", y=\"positive\", hue=\"kmeans_label\", alpha=0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Negative Tweets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uns wird klar, dass die meisten neutralen Tweets sich in Cluster 1 befinden. Wir gehen davon aus, dass dies die Menschen sind, die man am ehesten als Kunden der Bahn beinflussen kann. Zur Überprüfung unserer Annahme, schauen wir stichpunktartig in die Texte des Clusters, um einzuschätzen, ob die Meinungen in den Tweets positiv beeinflussbar ist."
    ]
   },
   {
@@ -1018,9 +1231,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Da uns die Ausreißer bei den sehr negativen Tweets bei Cluster 3 (mit dem 9€ Bezug) aufgefallen sind, haben wir einmal in die Datei \"dataset_sentiments.pckl\" geschaut. Wir erkennen, dass die negativsten Tweets keine generelle Beleidigungen enthalten, sondern tatsächliche Probleme aufweisen, die mit überfüllten oder zu spät kommenden Zügen zu tun hat. Er wird immer wieder auf Platzmangel bei der Fahrradmitnahme hingewiesen.\n",
+    "\n",
+    "Aus diesem Grund schauen wir uns im folgenden die generellen Tweets mit dem Wort 'voll' und einem negativgehalt über 4.0 an."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1534,72 +1758,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>is_neun_euro</th>\n",
-       "      <th>positive</th>\n",
-       "      <th>negative</th>\n",
-       "      <th>neutral</th>\n",
-       "      <th>kmeans_label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>median</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-1.949831</td>\n",
-       "      <td>-0.014251</td>\n",
-       "      <td>2.082915</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>0.060018</td>\n",
-       "      <td>-1.542756</td>\n",
-       "      <td>0.721486</td>\n",
-       "      <td>1.532972</td>\n",
-       "      <td>0.829283</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        is_neun_euro  positive  negative   neutral  kmeans_label\n",
-       "median      0.000000 -1.949831 -0.014251  2.082915      1.000000\n",
-       "mean        0.060018 -1.542756  0.721486  1.532972      0.829283"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df[cluster_variables].agg(['median', 'mean'])"
+    "Wir erkennen auch hier, dass es sehr oft (14/23 Tweets) um zu volle Züge geht."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Themenfindung"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Eine weitere Idee ist es nun, sich mit den Hashtags in den einzelnen Dateien zu befassen. Wir hoffen so evtl. ein Themenbezug in den Clustern erkennen zu können."
    ]
   },
   {
@@ -2049,7 +2225,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2180,26 +2358,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "positive   -1.542756\n",
-       "negative    0.721486\n",
-       "neutral     1.532972\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df[['positive', 'negative', 'neutral']].mean()"
+    "Wir kommen zu dem Ergebnis, dass wir aus den Hashtags keine genauen Schlüsse ziehen können. Kommt ein Hashtag in einem negativen Cluster vor, so kommt er auch in einem positiven vor und umgekehrt. Auch bei der Betrachtung der Tweets mit dem bloßen Auge, fallen einem keine weiteren großen Themengebiete, wie die überfüllten Züge auf. Hier muss evtl. noch weitere Recherche betrieben werden."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Weitere Graphen zur Veranschaulichung der Daten"
    ]
   },
   {
@@ -29566,10 +29735,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Ergebnisse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Das generelle Stimmungsbild für den Kontext Fahrrad & Bahn ist neutral evtl.etwas negativ behaftet. Hier muss daran gedacht werden, dass sich zufriedene Menschen normalerweise nicht auf Social Media äußern. Rechnet man diese Menschen pauschal mit ein, kommt man zu dem eher neutralen bis leicht negativen Gesamtbild für das Datenset bei unserer Sentimentanalyse.\n",
+    "\n",
+    "Unsere Idee ist es, dass man die neutralen Twitter User als Deutsche Bahn umwerben könnte. Diese Personengruppe ist noch nicht so festgefahren in ihrer Meinund. Sehr negative Meinungen sind meist sehr schwer zu überzeugen, da die Personen schon eine feste Meinung gebildet haben, während sehr positive Meinungen von Personen kommen, die eh schon sehr positiv gegenüber den Bahn eingestellt sind und nichtmehr umworben werden müssen. Im Gegenteil machen sie durch ihre Tweets sogar kostenlose Werbung für die Bahn und überzeugen evtl. ihre Follower.\n",
+    "\n",
+    "Auffällig beim Kontext Bahn & Fahrrad mit 9€ Bezug ist, dass es hier starke Abweichungen beim Mean und Median bei den negativen Tweets gibt. Es gibt hier zwar nur sehr wenige, aber auch sehr negative Tweets. Es wird bei nährer Betrachtung klar, dass diese negative Tweets nicht umbedingt auf Beldeidigungen oder einer generellen negativen Haltung gegenüber der Bahn zurückzuführen sind. Sie können zu dem Problemfeld des Platzmangels für das Fahrrad (Zug überfüllt und verspätet) zugeordent werden.\n",
+    "\n",
+    "\n",
+    "Generell ist oft ein Thema der negativen Tweets, dass die Züge zu überfüllt sind und es deshalb keine Möglichkeit der Fahrradmitnahme gibt. Eine Überlegung wäre hier eine Echtzeitanalyse auf den Social Media Daten zu erstellen, sodass die Bahn schneller informiert werden kann, wenn eine Überfüllung des Zugs eintritt.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
