--- a/download_twitter_data.ipynb
+++ b/download_twitter_data.ipynb
@@ -478,6 +478,20 @@
    "source": [
     "tweets_data['lang'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Weiter geht es in der Datei \"Load_Datasets.ipynb\". Hier werden die einzelnen Pickle-Dateien zu einem großen Datenset vereint, das Datenset bereinigt und für eine Analyse vorbereitet. Zudem wird hier auch die Sentiment-Analyse durchgeführt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
